--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Dopamine - A browser-based space shooter game with RPG elements">
+    <meta name="theme-color" content="#000000">
     <title>Dopamine - Space Shooter RPG</title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- Preload key JavaScript modules -->
+    <link rel="preload" href="js/main.js" as="script" type="module">
+    <link rel="preload" href="js/engine/game.js" as="script" type="module">
 </head>
 <body>
     <div id="game-container">
